# unstruwwel-py

./: .gitignore  README.md  pyproject.toml
Python/: accessors_century.py  accessors_decate.py  accessors_period.py  accessors_year.py  get_dates.py  guess_midas.py  utils.py
R/: languages.py
data-raw/: en.json
src/unstruwwel_py/: __init__.py  core.py  dates.py  lang.py  periods.py  resources.py
src/unstruwwel_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/unstruwwel_py/parsers/: __init__.py  centuries.py  dates.py  decades.py  intervals.py  seasons.py
tests/: conftest.py  test_api_basic.py  test_api_parity_r_subset.py  test_century.py  test_core_iso_format.py  test_decade.py  test_language_guess.py  test_period.py  test_periods.py  test_unstruwwel.py  test_unstruwwel_api.py  test_year.py
unstruwwel/: century.py  date_parser.py  decade.py  get_dates.py  guess_midas.py  languages.py  period.py  unstruwwel.py  utils.py  year.py
