[tool.poetry]
name = "unstruwwel"
version = "0.2.0"
description = "Detect and Parse Historic Dates in R"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langdetect = "^1.0.9"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
