[tool.poetry]
name = "unstruwwel-py"
version = "0.1.0"
description = "Detect and Parse Historic Dates in Python"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
